<resources>
    <string name="app_name">Card Scan</string>
    <string name="request_permission">This sample needs camera permission.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="testocr">TestOcr</string>
    <string name="scan_card">Scan Card</string>
    <string name="take_picture">take picture</string>
    <string name="positionCard">Position your card in the frame so the card number is visible</string>
    <string name="flashlight_button">Toggle flashlight</string>
    <string name="todo">TODO</string>
    <string name="_4242_4242_4242_4242">4242 4242 4242 4242</string>
    <string name="_5_18">5/18</string>
    <string name="verify_your_card">Verify your card</string>
</resources>
